# go-sui-sdk

./: .gitignore  LICENSE  README.md  builder.go  go.mod  go.sum  signer.go  sui.go
example/: main.go
sui_rpc_proto/: argument.proto  balance_change.proto  bcs.proto  checkpoint.proto  checkpoint_contents.proto  checkpoint_summary.proto  effects.proto  epoch.proto  error_reason.proto  event.proto  executed_transaction.proto  execution_status.proto  gas_cost_summary.proto  input.proto  jwk.proto  ledger_service.proto  move_package.proto  move_package_service.proto  name_service.proto  object.proto  object_reference.proto  owner.proto  protocol_config.proto  signature.proto  signature_scheme.proto  signature_verification_service.proto  state_service.proto  subscription_service.proto  system_state.proto  transaction.proto  transaction_execution_service.proto
transaction/: Cargo.toml  transaction_builder.h
transaction-example/: main.go
transaction-example/cgo/: main.go
transaction/src/: builder.rs  ffi.rs  lib.rs
transaction/src/intent/: coin_with_balance.rs  mod.rs
v2/: builder_cgo.go
