[package]
name = "transaction-builder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["intents"]
intents = ["dep:sui-rpc", "dep:async-trait"]

[dependencies]
bcs = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
sui-sdk-types = {git = "https://github.com/MystenLabs/sui-rust-sdk.git", tag = "sui-sdk-types-0.2.2", features = ["serde", "hash"]}
thiserror = "2.0"

# Required for supporting intents and transaction resolution
sui-rpc = {git = "https://github.com/MystenLabs/sui-rust-sdk.git", tag = "sui-rpc-0.2.2", optional = true }
async-trait = { version = "0.1.89", optional = true }
